<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="start">start</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="loading">Loading</string>
    <string name="check">Check</string>
    <string name="finish">finish</string>
    <string name="score">Score</string>
</resources>